composing messages, topic moderation, deleting posts, quick edit

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -350,55 +350,50 @@ p.photo-description {
   margin: 0;
 }
 
-/* line 155, ../sass/global.scss */
-.progress {
-  margin: 10px 0;
-}
-
-/* line 160, ../sass/global.scss */
+/* line 156, ../sass/global.scss */
 .panel-footer .form-group {
   margin-bottom: 0;
 }
 
-/* line 165, ../sass/global.scss */
+/* line 161, ../sass/global.scss */
 footer {
   margin-bottom: 20px;
   text-align: center;
   font-size: 8pt;
   color: #ccc;
 }
-/* line 170, ../sass/global.scss */
+/* line 166, ../sass/global.scss */
 footer a {
   margin-left: 13px;
 }
 
-/* line 175, ../sass/global.scss */
+/* line 171, ../sass/global.scss */
 .album {
   padding: 5px 15px 5px 5px;
   border: 0;
   height: 162px;
   position: relative;
 }
-/* line 179, ../sass/global.scss */
+/* line 175, ../sass/global.scss */
 .album .photo {
   position: absolute;
   z-index: 10;
 }
-/* line 180, ../sass/global.scss */
+/* line 176, ../sass/global.scss */
 .album .description {
   position: absolute;
   z-index: 1;
   padding: 10px 5px 10px 230px;
 }
 
-/* line 183, ../sass/global.scss */
+/* line 179, ../sass/global.scss */
 .photo, .photo-large {
   float: left;
   padding: 5px;
   border: 0;
   text-align: center;
 }
-/* line 186, ../sass/global.scss */
+/* line 182, ../sass/global.scss */
 .photo a.thumb, .photo-large a.thumb {
   display: block;
   background: #888;
@@ -407,125 +402,138 @@ footer a {
   text-decoration: none;
   padding: 5px;
 }
-/* line 189, ../sass/global.scss */
+/* line 185, ../sass/global.scss */
 .photo a.thumb:hover, .photo-large a.thumb:hover {
   background: #999;
   border: 1px solid #444;
 }
-/* line 191, ../sass/global.scss */
+/* line 187, ../sass/global.scss */
 .photo.large, .photo-large.large {
   float: none;
 }
 
-/* line 193, ../sass/global.scss */
+/* line 189, ../sass/global.scss */
 .photo {
   width: 222px;
   height: 172px;
 }
 
-/* line 199, ../sass/global.scss */
+/* line 195, ../sass/global.scss */
 table.table td.icon {
   padding: 6px 0 0;
   text-align: center;
   vertical-align: middle;
 }
-/* line 204, ../sass/global.scss */
+/* line 200, ../sass/global.scss */
 table.table td.icon.wide {
   padding: 4px 0;
 }
-/* line 208, ../sass/global.scss */
+/* line 204, ../sass/global.scss */
 table.table td.forum {
   padding: 6px;
   vertical-align: middle;
 }
-/* line 212, ../sass/global.scss */
+/* line 208, ../sass/global.scss */
 table.table td.forum a {
   font-weight: bold;
 }
-/* line 216, ../sass/global.scss */
+/* line 212, ../sass/global.scss */
 table.table td.topic {
   padding: 6px;
 }
-/* line 219, ../sass/global.scss */
+/* line 215, ../sass/global.scss */
 table.table td.topic .thread_preview {
   width: 100%;
   height: 1.2em;
   overflow: hidden;
 }
-/* line 225, ../sass/global.scss */
+/* line 221, ../sass/global.scss */
 table.table td.lastpost {
   padding: 6px;
   vertical-align: middle;
 }
-/* line 229, ../sass/global.scss */
+/* line 225, ../sass/global.scss */
 table.table td.lastpost a {
   font-weight: bold;
 }
-/* line 230, ../sass/global.scss */
+/* line 226, ../sass/global.scss */
 table.table td.lastpost div a {
   font-weight: normal;
 }
-/* line 231, ../sass/global.scss */
+/* line 227, ../sass/global.scss */
 table.table td.lastpost.topic {
   text-align: right;
   font-size: 10pt;
 }
-/* line 232, ../sass/global.scss */
+/* line 228, ../sass/global.scss */
 table.table td.lastpost.message {
   font-size: 10pt;
   color: #999;
 }
-/* line 234, ../sass/global.scss */
+/* line 230, ../sass/global.scss */
 table.table td.score {
   padding: 4px 0;
 }
-/* line 235, ../sass/global.scss */
+/* line 231, ../sass/global.scss */
 table.table td.ending {
   font-size: 10pt;
 }
-/* line 236, ../sass/global.scss */
+/* line 232, ../sass/global.scss */
 table.table td.date {
   font-size: 10pt;
   text-align: center;
 }
-/* line 237, ../sass/global.scss */
+/* line 233, ../sass/global.scss */
 table.table td.posts {
   font-size: 10pt;
   text-align: center;
   color: #aaa;
 }
-/* line 240, ../sass/global.scss */
+/* line 234, ../sass/global.scss */
+table.table td.nowrap {
+  white-space: nowrap;
+}
+/* line 237, ../sass/global.scss */
 table.table th.date, table.table th.posts {
   text-align: center;
 }
-/* line 247, ../sass/global.scss */
+/* line 244, ../sass/global.scss */
 table.table tr.unread td.topic a, table.table tr.unread td.from a {
   font-weight: bold;
 }
-/* line 252, ../sass/global.scss */
+/* line 249, ../sass/global.scss */
 table.table tr.selected td {
   background: #555 !important;
 }
-/* line 254, ../sass/global.scss */
+/* line 251, ../sass/global.scss */
 table.table .tiny {
   font-size: 9pt;
   color: #000 !important;
   font-weight: normal !important;
 }
-/* line 256, ../sass/global.scss */
+/* line 253, ../sass/global.scss */
 table.table th.icon, table.table td.icon {
   width: 50px;
 }
-/* line 257, ../sass/global.scss */
+/* line 254, ../sass/global.scss */
 table.table th.icon.wide, table.table td.icon.wide {
   width: 55px;
 }
-/* line 259, ../sass/global.scss */
+/* line 256, ../sass/global.scss */
 table.table .posts {
   width: 80px;
 }
 
-/* line 261, ../sass/global.scss */
+/* line 258, ../sass/global.scss */
+.table.no-border {
+  background: none;
+}
+/* line 262, ../sass/global.scss */
+.table.no-border > tbody > tr th, .table.no-border > tbody > tr td {
+  border-top: none;
+}
+
+/* line 268, ../sass/global.scss */
 .smileys {
   border: 1px solid #666;
   padding: 6px;
@@ -535,53 +543,53 @@ table.table .posts {
   font-size: 10pt;
 }
 
-/* line 269, ../sass/global.scss */
+/* line 276, ../sass/global.scss */
 .emote {
   padding: 4px 6px 2px 6px;
   float: left;
   border: 1px solid transparent;
 }
-/* line 273, ../sass/global.scss */
+/* line 280, ../sass/global.scss */
 .emote:hover {
   background: #5f5f5f;
   border: 1px solid #333;
 }
-/* line 274, ../sass/global.scss */
+/* line 281, ../sass/global.scss */
 .emote:active {
   background: #444;
   border: 1px solid #222;
 }
 
-/* line 277, ../sass/global.scss */
+/* line 284, ../sass/global.scss */
 ul.dropdown-menu.bbcode-menu {
   cursor: default;
 }
-/* line 281, ../sass/global.scss */
+/* line 288, ../sass/global.scss */
 ul.dropdown-menu.bbcode-menu li:hover {
   background: #5f5f5f;
 }
-/* line 284, ../sass/global.scss */
+/* line 291, ../sass/global.scss */
 ul.dropdown-menu.bbcode-size {
   min-width: 100px;
 }
-/* line 287, ../sass/global.scss */
+/* line 294, ../sass/global.scss */
 ul.dropdown-menu.bbcode-size li {
   padding: 2px 8px;
 }
-/* line 289, ../sass/global.scss */
+/* line 296, ../sass/global.scss */
 ul.dropdown-menu.bbcode-color {
   min-width: 152px;
   width: 152px;
   padding-left: 3px;
 }
-/* line 294, ../sass/global.scss */
+/* line 301, ../sass/global.scss */
 ul.dropdown-menu.bbcode-color li {
   display: block;
   float: left;
   padding: 3px;
   font-size: 0;
 }
-/* line 300, ../sass/global.scss */
+/* line 307, ../sass/global.scss */
 ul.dropdown-menu.bbcode-color li span {
   display: block;
   border: 1px solid #aca899;
@@ -589,49 +597,49 @@ ul.dropdown-menu.bbcode-color li span {
   width: 12px;
 }
 
-/* line 309, ../sass/global.scss */
+/* line 316, ../sass/global.scss */
 .btn.btn-bbcode {
   min-width: 32px;
   height: 30px;
   overflow: hidden;
 }
-/* line 314, ../sass/global.scss */
+/* line 321, ../sass/global.scss */
 .btn.btn-bbcode .bbcode-quote {
   font-size: 36px;
   line-height: 1;
   display: block;
 }
-/* line 319, ../sass/global.scss */
+/* line 326, ../sass/global.scss */
 .btn.btn-bbcode .bbcode-underline {
   text-decoration: underline;
   font-size: 15px;
   line-height: 12px;
 }
-/* line 324, ../sass/global.scss */
+/* line 331, ../sass/global.scss */
 .btn.btn-bbcode .bbcode-strikethrough {
   text-decoration: line-through;
   font-size: 15px;
   line-height: 12px;
 }
-/* line 329, ../sass/global.scss */
+/* line 336, ../sass/global.scss */
 .btn.btn-bbcode .bbcode-ol {
   font-size: 9px;
   line-height: 10px;
   display: block;
 }
 
-/* line 336, ../sass/global.scss */
+/* line 343, ../sass/global.scss */
 table.calendar {
   padding: 0;
   border-collapse: collapse;
 }
-/* line 338, ../sass/global.scss */
+/* line 345, ../sass/global.scss */
 table.calendar th {
   text-align: center;
   width: 14%;
   color: #ccc;
 }
-/* line 339, ../sass/global.scss */
+/* line 346, ../sass/global.scss */
 table.calendar td.day {
   width: 14%;
   height: 85px;
@@ -641,33 +649,33 @@ table.calendar td.day {
   padding: 4px;
   font-size: 8pt;
 }
-/* line 342, ../sass/global.scss */
+/* line 349, ../sass/global.scss */
 table.calendar td.day.has-events {
   border: 2px solid #000;
   background: #7f7f7f;
 }
-/* line 343, ../sass/global.scss */
+/* line 350, ../sass/global.scss */
 table.calendar td.day.today {
   border: 2px solid #000;
 }
-/* line 344, ../sass/global.scss */
+/* line 351, ../sass/global.scss */
 table.calendar td.day.today.has-events {
   background: #999;
 }
 
-/* line 351, ../sass/global.scss */
+/* line 358, ../sass/global.scss */
 #shoutbox a.at_reply {
   color: #ccc;
   text-decoration: none;
 }
-/* line 353, ../sass/global.scss */
+/* line 360, ../sass/global.scss */
 #shoutbox th.date {
   background: #3e444c;
   color: #eee;
   text-align: right;
 }
 
-/* line 360, ../sass/global.scss */
+/* line 367, ../sass/global.scss */
 #embed #shoutbox tbody {
   display: block;
   font-size: 10pt;
@@ -675,7 +683,7 @@ table.calendar td.day.today.has-events {
   overflow: auto;
 }
 
-/* line 368, ../sass/global.scss */
+/* line 375, ../sass/global.scss */
 .attachment-box {
   margin: 15px 0 0;
   padding: 8px 0;
@@ -683,7 +691,7 @@ table.calendar td.day.today.has-events {
   border-bottom: 1px solid #999;
 }
 
-/* line 373, ../sass/global.scss */
+/* line 380, ../sass/global.scss */
 .userbox {
   padding: 0;
   position: absolute;
@@ -693,7 +701,7 @@ table.calendar td.day.today.has-events {
   background: #666;
   border: 1px solid #333;
 }
-/* line 377, ../sass/global.scss */
+/* line 384, ../sass/global.scss */
 .userbox a {
   display: block;
   width: 178px;
@@ -703,13 +711,13 @@ table.calendar td.day.today.has-events {
   border: 1px solid #666;
   color: #ddd;
 }
-/* line 380, ../sass/global.scss */
+/* line 387, ../sass/global.scss */
 .userbox a:hover {
   background: #888;
   border: 1px solid #333;
   color: #fff;
 }
-/* line 382, ../sass/global.scss */
+/* line 389, ../sass/global.scss */
 .userbox hr {
   width: 80%;
   border: 0;
@@ -718,7 +726,7 @@ table.calendar td.day.today.has-events {
   background: #ccc;
 }
 
-/* line 387, ../sass/global.scss */
+/* line 394, ../sass/global.scss */
 .usermenu, .userhov, .usersel {
   padding: 3px 10px;
   height: 28px;
@@ -730,24 +738,24 @@ table.calendar td.day.today.has-events {
   z-index: 10;
 }
 
-/* line 391, ../sass/global.scss */
+/* line 398, ../sass/global.scss */
 .usermenu {
   border: 1px solid #666;
 }
 
-/* line 392, ../sass/global.scss */
+/* line 399, ../sass/global.scss */
 .userhov, .usermenu:hover {
   background: #888;
   border: 1px solid #333;
 }
 
-/* line 393, ../sass/global.scss */
+/* line 400, ../sass/global.scss */
 .usersel, .usermenu:active {
   background: #666;
   border: 1px solid #333;
 }
 
-/* line 395, ../sass/global.scss */
+/* line 402, ../sass/global.scss */
 a.scaled {
   text-decoration: none;
   display: block;
@@ -758,32 +766,32 @@ a.scaled {
   font-size: 10pt;
 }
 
-/* line 400, ../sass/global.scss */
+/* line 407, ../sass/global.scss */
 .quote {
   margin: 5px 0 5px 20px;
   border: 1px solid #333;
   background: #777;
   padding: 0;
 }
-/* line 402, ../sass/global.scss */
+/* line 409, ../sass/global.scss */
 .quote .author {
   margin: 0;
   padding: 5px;
   border-bottom: 1px solid #333;
   background: #555;
 }
-/* line 404, ../sass/global.scss */
+/* line 411, ../sass/global.scss */
 .quote .author img {
   margin-left: 10px;
   vertical-align: middle;
 }
-/* line 406, ../sass/global.scss */
+/* line 413, ../sass/global.scss */
 .quote .content {
   margin: 0;
   padding: 5px 15px 5px 5px;
 }
 
-/* line 409, ../sass/global.scss */
+/* line 416, ../sass/global.scss */
 .spoiler-alert {
   color: #900;
   background: #777;
@@ -792,13 +800,13 @@ a.scaled {
   text-decoration: none;
   padding: 2px 5px;
 }
-/* line 412, ../sass/global.scss */
+/* line 419, ../sass/global.scss */
 .spoiler-alert:hover {
   color: #060;
   border: 2px dashed #060;
 }
 
-/* line 414, ../sass/global.scss */
+/* line 421, ../sass/global.scss */
 .spoiler {
   display: none;
   border: 2px dashed #900;
@@ -806,7 +814,7 @@ a.scaled {
   padding: 5px;
 }
 
-/* line 418, ../sass/global.scss */
+/* line 425, ../sass/global.scss */
 pre.code {
   font-size: 10pt;
   font-family: "Courier New",mono;
@@ -819,18 +827,18 @@ pre.code {
   overflow-x: auto;
 }
 
-/* line 424, ../sass/global.scss */
+/* line 431, ../sass/global.scss */
 .sig {
   border-top: 1px dotted #ccc;
   color: #ccc;
   font-size: 10pt;
 }
-/* line 428, ../sass/global.scss */
+/* line 435, ../sass/global.scss */
 .sig object {
   display: none;
 }
 
-/* line 431, ../sass/global.scss */
+/* line 438, ../sass/global.scss */
 .thumbnail-selector {
   float: left;
   width: 500px;
@@ -843,130 +851,130 @@ pre.code {
   line-height: 0;
   padding: 10px 5px;
 }
-/* line 434, ../sass/global.scss */
+/* line 441, ../sass/global.scss */
 .thumbnail-selector .thumbnail {
   margin: 0 3px;
   height: 150px;
   display: inline-block;
 }
-/* line 436, ../sass/global.scss */
+/* line 443, ../sass/global.scss */
 .thumbnail-selector .thumbnail div {
   margin: auto;
   text-align: center;
   padding: 2px;
   font-size: 0;
 }
-/* line 438, ../sass/global.scss */
+/* line 445, ../sass/global.scss */
 .thumbnail-selector .thumbnail div.sel {
   padding: 0;
   border: 2px solid #00f;
 }
 
-/* line 444, ../sass/global.scss */
+/* line 451, ../sass/global.scss */
 body.mobile h2 {
   font-size: 16pt;
   font-variant: small-caps;
   margin: 2px 0 4px 0;
 }
-/* line 446, ../sass/global.scss */
+/* line 453, ../sass/global.scss */
 body.mobile h2 a {
   color: #fff;
   text-decoration: none;
 }
-/* line 450, ../sass/global.scss */
+/* line 457, ../sass/global.scss */
 body.mobile .table th.icon, body.mobile .table td.icon {
   width: 30px;
 }
-/* line 451, ../sass/global.scss */
+/* line 458, ../sass/global.scss */
 body.mobile .table th.icon.wide, body.mobile .table td.icon.wide {
   width: 35px;
 }
-/* line 454, ../sass/global.scss */
+/* line 461, ../sass/global.scss */
 body.mobile .album {
   width: 100%;
   height: 97px;
 }
-/* line 456, ../sass/global.scss */
+/* line 463, ../sass/global.scss */
 body.mobile .album .photo {
   width: 122px;
   height: 97px;
 }
-/* line 458, ../sass/global.scss */
+/* line 465, ../sass/global.scss */
 body.mobile .album .photo img {
   max-width: 100px;
   max-height: 75px;
 }
-/* line 460, ../sass/global.scss */
+/* line 467, ../sass/global.scss */
 body.mobile .album .description {
   padding-left: 130px;
 }
-/* line 463, ../sass/global.scss */
+/* line 470, ../sass/global.scss */
 body.mobile footer {
   border-left: 0;
   border-right: 0;
   width: 100%;
   top: 0;
 }
-/* line 466, ../sass/global.scss */
+/* line 473, ../sass/global.scss */
 body.mobile footer #social-media {
   float: none;
   margin: 0 0 10px;
 }
-/* line 468, ../sass/global.scss */
+/* line 475, ../sass/global.scss */
 body.mobile footer #social-media img {
   margin: 0;
 }
-/* line 469, ../sass/global.scss */
+/* line 476, ../sass/global.scss */
 body.mobile footer #social-media a {
   margin: 0 3px;
 }
-/* line 473, ../sass/global.scss */
+/* line 480, ../sass/global.scss */
 body.mobile div.scaled {
   display: none;
 }
-/* line 474, ../sass/global.scss */
+/* line 481, ../sass/global.scss */
 body.mobile img.post-image {
   max-width: 100%;
   height: auto;
 }
 
 @media print {
-  /* line 478, ../sass/global.scss */
+  /* line 485, ../sass/global.scss */
   a {
     color: #369 !important;
     text-decoration: none;
   }
 
-  /* line 479, ../sass/global.scss */
+  /* line 486, ../sass/global.scss */
   nav, #babynav, header, footer, #quick-reply, .jumpbox, .btn {
     display: none;
   }
 
-  /* line 482, ../sass/global.scss */
+  /* line 489, ../sass/global.scss */
   header {
     height: auto;
   }
 
-  /* line 483, ../sass/global.scss */
+  /* line 490, ../sass/global.scss */
   footer {
     top: 0;
   }
 
-  /* line 485, ../sass/global.scss */
+  /* line 492, ../sass/global.scss */
   .welcome .table-header {
     border-top: 1px solid #000;
   }
-  /* line 486, ../sass/global.scss */
+  /* line 493, ../sass/global.scss */
   .welcome .header {
     color: #000;
   }
 
-  /* line 489, ../sass/global.scss */
+  /* line 496, ../sass/global.scss */
   table.table2 th {
     color: #000;
   }
 
-  /* line 491, ../sass/global.scss */
+  /* line 498, ../sass/global.scss */
   img {
     max-width: 100%;
     height: auto;
