--- a/public/sass/global.scss
+++ b/public/sass/global.scss
@@ -27,14 +27,13 @@
 }
 
 h1 {
-	font-size:12pt;
-	font-weight:bold; 
+	font-size: 12pt;
 	img { vertical-align:middle; }
 }
-h2 {	font-size:11pt; font-weight:bold;
+h2 {
+	font-size: 11pt;
 	img { vertical-align:middle; }
 }
-small { font-size:8pt; }
 * {
 	@include border-box;
 }
@@ -47,12 +46,8 @@ body {
 		padding-top: 0;
 	}
 }
-img { border:0; }
-ul, ol { margin:6px 20px; padding:0; }
-.v_top { vertical-align:top; }
 
 a {
-	text-decoration:none;
 	&.admin, &.mod { font-weight:bold; }
 	&.admin { color:#00b4ff; }
 }
@@ -81,11 +76,11 @@ header {
 		margin-right: 6px;
 	}
 }
+ul.nav-tabs {
+	margin: 10px 0;
+}
 
 ol.breadcrumb {
-	margin-left: 0;
-	margin-right: 0;
-
 	>li+li:before {
 		content: "\203a\00a0";
 	}
@@ -100,14 +95,6 @@ ol.breadcrumb {
 
 #main_beta {
 	position: relative;
-
-	.moderate {
-		padding:4px;
-		a {
-			float: left;
-			margin: 0 3px;
-		}
-	}
 }
 
 .birthday {
@@ -377,28 +364,6 @@ table.calendar {
 	border-top:1px solid #999; border-bottom:1px solid #999
 }
 
-.userbox {
-	padding:0; position:absolute; top:-400px; left:-400px; z-index:10; 
-	background:$menu-bg; border:1px solid #333;
-	
-	a {
-		display:block; width:178px; padding:3px 8px 3px 20px; text-decoration:none; 
-		cursor:default; border:1px solid $menu-bg; color:$menu-color;
-		&:hover { background:$menu-hover; border:1px solid #333; color:#fff; }
-	}
-	hr {
-		width:80%; border:0; height:1px; margin:2px 0 2px 20px; background:#ccc;
-	}
-}
-
-.usermenu, .userhov, .usersel {
-	padding:3px 10px; height:28px; font-size:11pt; font-weight:bold;
-	float:left; cursor:default; position:relative; z-index:10;
-}
-.usermenu { border:1px solid $subheader-bg; }
-.userhov, .usermenu:hover { background:$menu-hover; border:1px solid #333; }
-.usersel, .usermenu:active { background:$menu-bg; border:1px solid #333; }
-
 a.scaled {
 	text-decoration:none; display:block; padding:4px 6px; border:1px solid #000; 
 	background:$scaled-bg; color:#000; font-size:10pt
@@ -447,14 +412,10 @@ pre.code {
 	}
 }
 
-body.mobile {
-	h2 {
-		font-size: 16pt; font-variant:small-caps; margin:2px 0 4px 0;
-		a { color:#fff; text-decoration:none;
-		}
-	}
-	.table {
-		th.icon,td.icon { width:30px;
+@media all and ( max-width: 767px ) {
+	table.table {
+		th.icon, td.icon {
+			width:30px;
 			&.wide { width:35px; }
 		}
 	}
@@ -468,15 +429,13 @@ body.mobile {
 	}
 
 	footer {
-		border-left:0; border-right:0; width:100%; 
-		top: 0;
 		#social-media {
 			float:none; margin:0 0 10px;
 			img { margin: 0; }
 			a { margin:0 3px; }
 		}
 	}
-	
+
 	div.scaled { display:none; }
 	img.post-image { max-width:100%; height:auto; }
 }
@@ -485,15 +444,6 @@ body.mobile {
 	a { color:#369 !important; text-decoration:none; }
 	nav, #babynav, header, footer, #quick-reply, .jumpbox, .btn {
 		display:none;
-	}
-	header { height: auto; }
-	footer { top: 0; }
-	.welcome {
-		.table-header { border-top:1px solid #000; }
-		.header { color:#000; }
-	}
-	table.table2 {
-		th { color:#000; }
 	}
 	img { max-width:100%; height:auto; }
 }
